--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,8 @@
     "node": "18.10.0"
   },
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "shahriar Sajeeb",
   "license": "ISC",
